--- a/src/GoodByeHelloWorld/packages.config
+++ b/src/GoodByeHelloWorld/packages.config
@@ -3,6 +3,7 @@
   <package id="angularjs" version="1.2.23" targetFramework="net451" />
   <package id="angularjs.TypeScript.DefinitelyTyped" version="2.0.6" targetFramework="net451" />
   <package id="EntityFramework" version="5.0.0" targetFramework="net451" />
+  <package id="JasmineTest" version="2.0.0" targetFramework="net451" />
   <package id="jQuery" version="2.1.1" targetFramework="net451" />
   <package id="jquery.TypeScript.DefinitelyTyped" version="1.3.8" targetFramework="net451" />
   <package id="jQuery.UI.Combined" version="1.8.20.1" targetFramework="net451" />
